# Huffman-File-Compressor

./: CMakeLists.txt  Makefile  README.md  allchars.huff  app.py  archive.huff  book.huff  book_secure.huff  cmd.huff  huffman.cpp  input.txt  large.huff  large.txt  output.huff  repeat.huff  single.huff
